--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -91,7 +91,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveBox.svg&amp;filetimestamp=20191212064103&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveBox.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveBox.html" title="PartDesign SubtractiveBox">Ode&#269;tov&yacute; kv&aacute;dr</a>: p&#345;id&aacute; ode&#269;tov&yacute; kv&aacute;dr k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveCylinder.svg&amp;filetimestamp=20191212064220&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveCylinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveCylinder.html" title="PartDesign SubtractiveCylinder">Ode&#269;tov&yacute; v&aacute;lec</a>: p&#345;id&aacute; ode&#269;tov&yacute; v&aacute;lec k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveSphere.svg&amp;filetimestamp=20191212064432&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveSphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveSphere.html" title="PartDesign SubtractiveSphere">Ode&#269;tov&aacute; koule</a>: p&#345;id&aacute; ode&#269;tovou kouli k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveCone.svg&amp;filetimestamp=20191212064139&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveCone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveCone.html" title="PartDesign SubtractiveCone">Subtractive Cone</a>: adds a subtractive cone to the active body.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveCone.svg&amp;filetimestamp=20191212064139&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveCone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveCone.html" title="PartDesign SubtractiveCone">Ode&#269;tov&yacute; ku&#382;el</a>: p&#345;id&aacute; ode&#269;tov&yacute; ku&#382;el k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveEllipsoid.svg&amp;filetimestamp=20191212064314&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveEllipsoid.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveEllipsoid.html" title="PartDesign SubtractiveEllipsoid">Subtractive Ellipsoid</a>: adds a subtractive ellipsoid to the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveTorus.svg&amp;filetimestamp=20191212064503&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveTorus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveTorus.html" title="PartDesign SubtractiveTorus">Subtractive Torus</a>: adds a subtractive torus to the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractivePrism.svg&amp;filetimestamp=20191212064358&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractivePrism.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractivePrism.html" title="PartDesign SubtractivePrism">Subtractive Prism</a>: adds a subtractive prism to the active body.</li></ul></dd></dl>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119211823
+Cached time: 20260119211906
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.233 seconds
-Real time usage: 0.530 seconds
+CPU time usage: 0.246 seconds
+Real time usage: 0.944 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.497      1 -total
- 42.68%   24.538      1 Template:Userdocnavi/cs
- 20.11%   11.561      1 Template:PartDesign_Tools_navi/cs
- 12.06%    6.935      1 Template:MenuCommand
- 10.71%    6.160      2 Template:Navigation_menu_2
-  7.41%    4.259      5 Template:VersionPlus
-  7.33%    4.216      2 Template:Docnav
-  4.34%    2.493      1 Template:Version
-  4.23%    2.430      1 Template:TOCright
+100.00%   82.339      1 -total
+ 43.37%   35.710      1 Template:PartDesign_Tools_navi/cs
+ 19.58%   16.118      1 Template:Userdocnavi/cs
+ 13.91%   11.452      1 Template:MenuCommand
+  8.19%    6.742      2 Template:Navigation_menu_2
+  6.23%    5.131      5 Template:VersionPlus
+  4.78%    3.938      2 Template:Docnav
+  4.22%    3.477      1 Template:Version
+  2.19%    1.805      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211822 and revision id 1741280. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211905 and revision id 1741283. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
