--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -93,7 +93,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveSphere.svg&amp;filetimestamp=20191212064432&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveSphere.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveSphere.html" title="PartDesign SubtractiveSphere">Ode&#269;tov&aacute; koule</a>: p&#345;id&aacute; ode&#269;tovou kouli k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveCone.svg&amp;filetimestamp=20191212064139&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveCone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveCone.html" title="PartDesign SubtractiveCone">Ode&#269;tov&yacute; ku&#382;el</a>: p&#345;id&aacute; ode&#269;tov&yacute; ku&#382;el k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveEllipsoid.svg&amp;filetimestamp=20191212064314&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveEllipsoid.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveEllipsoid.html" title="PartDesign SubtractiveEllipsoid">Ode&#269;tov&yacute; elipsoid</a>: p&#345;id&aacute; ode&#269;tov&yacute; elipsoid k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveTorus.svg&amp;filetimestamp=20191212064503&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveTorus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveTorus.html" title="PartDesign SubtractiveTorus">Subtractive Torus</a>: adds a subtractive torus to the active body.</li></ul></dd></dl>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveTorus.svg&amp;filetimestamp=20191212064503&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveTorus.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractiveTorus.html" title="PartDesign SubtractiveTorus">Ode&#269;tov&yacute; torus</a>: p&#345;id&aacute; ode&#269;tov&yacute; torus k aktivn&iacute;mu t&#283;lesu.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractivePrism.svg&amp;filetimestamp=20191212064358&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractivePrism.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubtractivePrism.html" title="PartDesign SubtractivePrism">Subtractive Prism</a>: adds a subtractive prism to the active body.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubtractiveWedge.svg&amp;filetimestamp=20191212064536&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubtractiveWedge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> &lrm;<a href="../PartDesign_SubtractiveWedge.html" title="PartDesign SubtractiveWedge">Subtractive Wedge</a>: adds a subtractive wedge to the active body.</li></ul></dd></dl>
 <h4><span class="mw-headline" id="Boolean">Boolean</span></h4>
@@ -189,12 +189,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119211945
+Cached time: 20260119212016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.235 seconds
-Real time usage: 0.747 seconds
+CPU time usage: 0.221 seconds
+Real time usage: 0.400 seconds
 Preprocessor visited node count: 465/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -205,18 +205,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.151      1 -total
- 25.86%   16.329      1 Template:Userdocnavi/cs
- 18.65%   11.777      1 Template:PartDesign_Tools_navi/cs
- 16.07%   10.148      2 Template:Navigation_menu_2
- 14.03%    8.863      1 Template:TOCright
- 11.56%    7.297      2 Template:Docnav
-  9.04%    5.709      1 Template:MenuCommand
-  7.47%    4.720      1 Template:Version
-  7.40%    4.674      5 Template:VersionPlus
+100.00%   29.465      1 -total
+ 36.87%   10.863      1 Template:PartDesign_Tools_navi/cs
+ 33.73%    9.940      1 Template:Userdocnavi/cs
+ 23.37%    6.887      2 Template:Navigation_menu_2
+ 10.29%    3.033      2 Template:Docnav
+  4.14%    1.219      1 Template:Version
+  4.07%    1.199      5 Template:VersionPlus
+  3.79%    1.118      1 Template:TOCright
+  3.58%    1.054      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119211944 and revision id 1741285. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212016 and revision id 1741287. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
