--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -99,7 +99,7 @@
 <p><span id="Boolean"></span>
 </p>
 <h4><span id="Booleovsk.C3.A9_operace"></span><span class="mw-headline" id="Booleovsk&eacute;_operace">Booleovsk&eacute; operace</span></h4>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Boolean.svg&amp;filetimestamp=20170324054605&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Boolean.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Boolean.html" title="PartDesign Boolean">Boolean Operation</a>: imports one or more Bodies or PartDesign Clones into the active body and applies a Boolean operation.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Boolean.svg&amp;filetimestamp=20170324054605&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Boolean.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Boolean.html" title="PartDesign Boolean">Booleovsk&aacute; operace</a>: importuje jeden nebo v&iacute;ce t&#283;les nebo klon&#367; PartDesign do aktivn&iacute;ho t&#283;lesa a provede booleovskou operaci.</li></ul>
 <h3><span class="mw-headline" id="Part_Design_Dress-Up_Features_toolbar">Part Design Dress-Up Features toolbar</span></h3>
 <p>These tools apply a treatment to edges or faces.
 </p>
@@ -191,12 +191,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119212614
+Cached time: 20260119212714
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.226 seconds
-Real time usage: 0.422 seconds
+CPU time usage: 0.219 seconds
+Real time usage: 0.549 seconds
 Preprocessor visited node count: 466/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -207,18 +207,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.192      1 -total
- 30.50%    8.294      1 Template:Userdocnavi/cs
- 27.85%    7.572      1 Template:PartDesign_Tools_navi/cs
- 17.93%    4.875      2 Template:Navigation_menu_2
- 10.48%    2.851      1 Template:TOCright
-  8.35%    2.271      2 Template:Docnav
-  7.01%    1.905      1 Template:MenuCommand
-  6.81%    1.851      5 Template:VersionPlus
-  5.30%    1.440      1 Template:Version
+100.00%   51.990      1 -total
+ 24.71%   12.847      1 Template:Version
+ 19.33%   10.052      1 Template:Userdocnavi/cs
+ 17.96%    9.338      1 Template:PartDesign_Tools_navi/cs
+ 13.20%    6.865      1 Template:MenuCommand
+ 10.67%    5.545      2 Template:Navigation_menu_2
+ 10.30%    5.354      2 Template:Docnav
+  4.44%    2.306      5 Template:VersionPlus
+  4.19%    2.179      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212613 and revision id 1741293. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212713 and revision id 1741295. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
