--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -100,7 +100,9 @@
 </p>
 <h4><span id="Booleovsk.C3.A9_operace"></span><span class="mw-headline" id="Booleovsk&eacute;_operace">Booleovsk&eacute; operace</span></h4>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Boolean.svg&amp;filetimestamp=20170324054605&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Boolean.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Boolean.html" title="PartDesign Boolean">Booleovsk&aacute; operace</a>: importuje jeden nebo v&iacute;ce t&#283;les nebo klon&#367; PartDesign do aktivn&iacute;ho t&#283;lesa a provede booleovskou operaci.</li></ul>
-<h3><span class="mw-headline" id="Part_Design_Dress-Up_Features_toolbar">Part Design Dress-Up Features toolbar</span></h3>
+<p><span id="Part_Design_Dress-Up_Features_toolbar"></span>
+</p>
+<h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_funkc.C3.AD_.C3.BAprav_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_funkc&iacute;_&uacute;prav_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta funkc&iacute; &uacute;prav d&iacute;l&#367;</span></h3>
 <p>These tools apply a treatment to edges or faces.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Fillet</a>: fillets (rounds) edges of the active body.</li></ul>
@@ -191,13 +193,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119212714
+Cached time: 20260119212852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.219 seconds
-Real time usage: 0.549 seconds
-Preprocessor visited node count: 466/1000000
+CPU time usage: 0.293 seconds
+Real time usage: 1.541 seconds
+Preprocessor visited node count: 467/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -207,18 +209,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.990      1 -total
- 24.71%   12.847      1 Template:Version
- 19.33%   10.052      1 Template:Userdocnavi/cs
- 17.96%    9.338      1 Template:PartDesign_Tools_navi/cs
- 13.20%    6.865      1 Template:MenuCommand
- 10.67%    5.545      2 Template:Navigation_menu_2
- 10.30%    5.354      2 Template:Docnav
-  4.44%    2.306      5 Template:VersionPlus
-  4.19%    2.179      1 Template:TOCright
+100.00%   81.603      1 -total
+ 40.12%   32.740      1 Template:Userdocnavi/cs
+ 29.05%   23.706      1 Template:PartDesign_Tools_navi/cs
+ 18.12%   14.789      2 Template:Navigation_menu_2
+ 13.78%   11.241      5 Template:VersionPlus
+  5.35%    4.367      1 Template:Version
+  4.06%    3.316      1 Template:MenuCommand
+  3.84%    3.130      2 Template:Docnav
+  2.32%    1.894      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212713 and revision id 1741295. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212850 and revision id 1741297. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
