--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -103,7 +103,7 @@
 <p><span id="Part_Design_Dress-Up_Features_toolbar"></span>
 </p>
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_funkc.C3.AD_.C3.BAprav_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_funkc&iacute;_&uacute;prav_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta funkc&iacute; &uacute;prav d&iacute;l&#367;</span></h3>
-<p>These tools apply a treatment to edges or faces.
+<p>Tyto n&aacute;stroje aplikuj&iacute; &uacute;pravu na hrany nebo plochy.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Fillet</a>: fillets (rounds) edges of the active body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Chamfer</a>: chamfers edges of the active body.</li></ul>
@@ -193,12 +193,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119212852
+Cached time: 20260119212910
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.293 seconds
-Real time usage: 1.541 seconds
+CPU time usage: 0.227 seconds
+Real time usage: 0.410 seconds
 Preprocessor visited node count: 467/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -209,18 +209,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   81.603      1 -total
- 40.12%   32.740      1 Template:Userdocnavi/cs
- 29.05%   23.706      1 Template:PartDesign_Tools_navi/cs
- 18.12%   14.789      2 Template:Navigation_menu_2
- 13.78%   11.241      5 Template:VersionPlus
-  5.35%    4.367      1 Template:Version
-  4.06%    3.316      1 Template:MenuCommand
-  3.84%    3.130      2 Template:Docnav
-  2.32%    1.894      1 Template:TOCright
+100.00%   28.751      1 -total
+ 29.23%    8.405      1 Template:Userdocnavi/cs
+ 24.04%    6.913      1 Template:PartDesign_Tools_navi/cs
+ 17.54%    5.044      2 Template:Navigation_menu_2
+ 10.61%    3.050      5 Template:VersionPlus
+  9.97%    2.866      1 Template:MenuCommand
+  9.63%    2.768      2 Template:Docnav
+  8.95%    2.573      1 Template:Version
+  3.49%    1.002      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212850 and revision id 1741297. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212910 and revision id 1741299. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
