--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -106,7 +106,7 @@
 <p>Tyto n&aacute;stroje aplikuj&iacute; &uacute;pravu na hrany nebo plochy.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Fillet.svg&amp;filetimestamp=20170324053340&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Fillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Fillet.html" title="PartDesign Fillet">Zaoblen&iacute;</a>: zaobluje hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Chamfer</a>: chamfers edges of the active body.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Chamfer.svg&amp;filetimestamp=20170324053411&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Chamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Chamfer.html" title="PartDesign Chamfer">Zkosen&iacute;</a>: zkos&iacute; hrany aktivn&iacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Draft.svg&amp;filetimestamp=20170324053440&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Draft.html" title="PartDesign Draft">Draft</a>: applies an angular draft to selected faces of the active body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Thickness.svg&amp;filetimestamp=20170324055310&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Thickness.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Thickness.html" title="PartDesign Thickness">Thickness</a>: creates a thick shell from the active body and opens selected face.</li></ul>
 <h3><span class="mw-headline" id="Part_Design_Transformation_Features_toolbar">Part Design Transformation Features toolbar</span></h3>
@@ -193,12 +193,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119212949
+Cached time: 20260119213011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.211 seconds
-Real time usage: 0.459 seconds
+CPU time usage: 0.202 seconds
+Real time usage: 0.350 seconds
 Preprocessor visited node count: 467/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -209,18 +209,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.373      1 -total
- 35.00%   18.328      1 Template:Userdocnavi/cs
- 17.86%    9.354      1 Template:MenuCommand
- 15.95%    8.351      1 Template:PartDesign_Tools_navi/cs
- 12.71%    6.657      2 Template:Navigation_menu_2
-  8.48%    4.439      1 Template:TOCright
-  8.38%    4.391      5 Template:VersionPlus
-  8.12%    4.253      2 Template:Docnav
-  3.41%    1.786      1 Template:Version
+100.00%   18.294      1 -total
+ 28.32%    5.181      1 Template:PartDesign_Tools_navi/cs
+ 28.01%    5.125      1 Template:Userdocnavi/cs
+ 17.79%    3.255      2 Template:Navigation_menu_2
+ 11.47%    2.099      2 Template:Docnav
+  8.76%    1.602      5 Template:VersionPlus
+  8.75%    1.600      1 Template:Version
+  5.60%    1.024      1 Template:TOCright
+  5.11%    0.935      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119212949 and revision id 1741301. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213010 and revision id 1741303. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
